// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMembers does work with custom expressions in arguments 1`] = `
Array [
  Object {
    "argumentPaths": Array [
      Node {
        "left": Node {
          "extra": Object {
            "raw": "123",
            "rawValue": 123,
          },
          "type": "NumericLiteral",
          "value": 123,
        },
        "operator": "+",
        "right": Node {
          "extra": Object {
            "raw": "123",
            "rawValue": 123,
          },
          "type": "NumericLiteral",
          "value": 123,
        },
        "type": "BinaryExpression",
      },
    ],
    "computed": false,
    "path": Node {
      "name": "bar",
      "type": "Identifier",
    },
  },
  Object {
    "argumentPaths": Array [],
    "computed": true,
    "path": Node {
      "extra": Object {
        "raw": "\\"baz\\"",
        "rawValue": "baz",
      },
      "type": "StringLiteral",
      "value": "baz",
    },
  },
]
`;

exports[`getMembers does work with custom expressions in chain 1`] = `
Array [
  Object {
    "argumentPaths": Array [
      Node {
        "extra": Object {
          "raw": "123",
          "rawValue": 123,
        },
        "type": "NumericLiteral",
        "value": 123,
      },
    ],
    "computed": false,
    "path": Node {
      "name": "bar",
      "type": "Identifier",
    },
  },
  Object {
    "argumentPaths": Array [],
    "computed": true,
    "path": Node {
      "left": Node {
        "extra": Object {
          "raw": "\\"\\"",
          "rawValue": "",
        },
        "type": "StringLiteral",
        "value": "",
      },
      "operator": "+",
      "right": Node {
        "extra": Object {
          "raw": "\\"\\"",
          "rawValue": "",
        },
        "type": "StringLiteral",
        "value": "",
      },
      "type": "BinaryExpression",
    },
  },
]
`;

exports[`getMembers finds all "members" "inside" a MemberExpression 1`] = `
Array [
  Object {
    "argumentPaths": Array [
      Node {
        "extra": Object {
          "raw": "123",
          "rawValue": 123,
        },
        "type": "NumericLiteral",
        "value": 123,
      },
    ],
    "computed": false,
    "path": Node {
      "name": "bar",
      "type": "Identifier",
    },
  },
  Object {
    "argumentPaths": Array [],
    "computed": true,
    "path": Node {
      "name": "baz",
      "type": "Identifier",
    },
  },
  Object {
    "argumentPaths": Array [],
    "computed": true,
    "path": Node {
      "extra": Object {
        "raw": "42",
        "rawValue": 42,
      },
      "type": "NumericLiteral",
      "value": 42,
    },
  },
]
`;

exports[`getMembers includes the root if option set to true 1`] = `
Array [
  Object {
    "argumentPaths": Array [],
    "computed": false,
    "path": Node {
      "name": "foo",
      "type": "Identifier",
    },
  },
  Object {
    "argumentPaths": Array [
      Node {
        "extra": Object {
          "raw": "123",
          "rawValue": 123,
        },
        "type": "NumericLiteral",
        "value": 123,
      },
    ],
    "computed": false,
    "path": Node {
      "name": "bar",
      "type": "Identifier",
    },
  },
  Object {
    "argumentPaths": Array [],
    "computed": true,
    "path": Node {
      "name": "baz",
      "type": "Identifier",
    },
  },
]
`;
